fixing page overflow

--- a/src/Pages/Landing/landing.css
+++ b/src/Pages/Landing/landing.css
@@ -158,6 +158,9 @@
   color: #2eca6a;
 }
 
-@media (min-width: 640px) and (max-width: 840px) {
-  
+@media screen and (max-width: 600px) {
+  .intro-subtitle {
+    font-size: 0.9rem;
+    font-weight: 500;
+  }
 }
